# comp_dnds

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
comp_dnds/: __init__.py  dnds.py  expected.py  paths.py
notebooks/: benchmark.ipynb
tests/: test_dnds.py  test_expected.py  test_paths.py
